# true_to_the_blue

./: .example.env  .gitignore  README.md  pyproject.toml  start_db.sh
migrations/: env.py
migrations/versions/: 1d1940e4bf68_added_game_model.py  34d33a8c0763_initial_migration.py  3ff968b8c7a7_initial_sports_models.py  65ac7951db19_drop_game_model_as_table.py  adc13f0e7dd9_initial_mlb_migration.py  afac9f468e25_added_table_associations.py  fbc1915a9978_added_record_model.py
models/: __init__.py  utils.py
models/base/: __init__.py  base.py  base_associations.py  game.py  league.py  record.py  season.py  team.py
models/mlb/: __init__.py  boxsore.py  mlb_boxscore.py  mlb_game.py  mlb_join_tables.py  mlb_league.py  mlb_record.py  mlb_season.py  mlb_team.py
utils/: __init__.py
utils/clients/: __init__.py  s3_client.py
validators/: __init__.py
validators/base/: __init__.py  base_data_model.py
validators/mlb/: __init__.py  mlb_data_model.py
