[tool.poetry]
name = "shared-models"
version = "0.1.0"
description = "Shared DB models"
authors = ["Nathan Stuart nathanstuart01@gmail.com"]
packages = [{ include = "models" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.16.1"
sqlmodel = "^0.0.24"

