[tool.poetry]
name = "shared_models"
version = "0.3.2"
description = "Shared DB models"
authors = ["Nathan Stuart nathanstuart01@gmail.com"]
packages = [{ include = "models" }, { include = "validators" }, { include = "utils"}]


[tool.poetry.group.dev.dependencies]
alembic = "^1.16.1"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.16.1"
sqlmodel = "^0.0.24"
pendulum = "^3.1.0"
psycopg2-binary = "^2.9.10"
black = "^25.1.0"
pydantic = "^2.11.7"
pytest = "^8.4.1"
boto3 = "^1.38.46"

